// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertDialog has correct role 1`] = `
<DocumentFragment>
  <div>
    <div
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(255, 255, 255, 0.75);"
    >
      <div
        aria-describedby="alert-desc"
        aria-labelledby="label-id"
        aria-modal="true"
        role="alertdialog"
      >
        <h2
          id="label-id"
        >
          Header
        </h2>
        <div
          id="alert-desc"
        >
          Don't Delete That Just Yet
        </div>
        <button>
          Close Me
        </button>
      </div>
    </div>
  </div>
  <div>
    <button
      aria-disabled="false"
    >
      Open Me
    </button>
  </div>
</DocumentFragment>
`;

exports[`Closing the dialog Click the dialog 1`] = `
<DocumentFragment>
  <div>
    <div
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(255, 255, 255, 0.75);"
    >
      <div
        aria-labelledby="label-id"
        aria-modal="true"
        data-testid="dialog"
        role="dialog"
      >
        <h2
          id="label-id"
        >
          Header
        </h2>
        <button>
          Close Me
        </button>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
  >
    <button
      aria-disabled="false"
    >
      Open Me
    </button>
  </div>
</DocumentFragment>
`;

exports[`Closing the dialog Click the overlay 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
  >
    <button
      aria-disabled="false"
    >
      Open Me
    </button>
  </div>
</DocumentFragment>
`;

exports[`Closing the dialog Clicking DialogCloseButton 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
  >
    <button
      aria-disabled="false"
    >
      Open Me
    </button>
  </div>
</DocumentFragment>
`;

exports[`Closing the dialog Escape key 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
  >
    <button
      aria-disabled="false"
    >
      Open Me
    </button>
  </div>
</DocumentFragment>
`;

exports[`Closing the dialog ModalRoot siblings return to original aria-hidden states 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
  >
    <button
      aria-disabled="false"
    >
      Open Me
    </button>
  </div>
  <div
    aria-hidden="false"
  />
  <div
    aria-hidden="true"
  />
</DocumentFragment>
`;

exports[`Dialog ignores children besides DialogOpenButton and DialogContent 1`] = `<DocumentFragment />`;

exports[`DialogContent aria-describedby DialogDescription's id 1`] = `
<DocumentFragment>
  <div
    style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(255, 255, 255, 0.75);"
  >
    <div
      aria-describedby="description-id"
      aria-labelledby="header-id"
      aria-modal="true"
      role="dialog"
    >
      <h2
        id="header-id"
      />
      <div
        id="description-id"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DialogContent aria-labelledby DialogLabel's id 1`] = `
<DocumentFragment>
  <div
    style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(255, 255, 255, 0.75);"
  >
    <div
      aria-labelledby="header-id"
      aria-modal="true"
      role="dialog"
    >
      <h2
        id="header-id"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Nested Dialog Modals 1`] = `
<DocumentFragment>
  <div>
    <button
      aria-disabled="false"
    >
      Open First
    </button>
  </div>
</DocumentFragment>
`;

exports[`Nested Dialog Modals 2`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
  >
    <button
      aria-disabled="false"
    >
      Open First
    </button>
  </div>
  <div>
    <div
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(255, 255, 255, 0.75);"
    >
      <div
        aria-labelledby="label-id"
        aria-modal="true"
        role="dialog"
      >
        <h2
          id="label-id"
        >
          First Header
        </h2>
        <button
          aria-disabled="false"
        >
          Open Second
        </button>
        <button>
          Close First
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Nested Dialog Modals 3`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
  >
    <button
      aria-disabled="false"
    >
      Open First
    </button>
  </div>
  <div
    aria-hidden="true"
  >
    <div
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(255, 255, 255, 0.75);"
    >
      <div
        aria-labelledby="label-id"
        aria-modal="true"
        role="dialog"
      >
        <h2
          id="label-id"
        >
          First Header
        </h2>
        <button
          aria-disabled="false"
        >
          Open Second
        </button>
        <button>
          Close First
        </button>
      </div>
    </div>
  </div>
  <div>
    <div
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(255, 255, 255, 0.75);"
    >
      <div
        aria-labelledby="label-id"
        aria-modal="true"
        role="dialog"
      >
        <h2
          id="label-id"
        >
          Second Header
        </h2>
        <button>
          Close Second
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Opening a dialog Clicking DialogOpenButton 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
  >
    Open Me
  </button>
  <div>
    <div
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(255, 255, 255, 0.75);"
    >
      <div
        aria-labelledby="label-id"
        aria-modal="true"
        role="dialog"
      >
        <h2
          id="label-id"
        >
          Content
        </h2>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Opening a dialog Sets modalRoot's siblings to aria-hidden 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
  >
    <button
      aria-disabled="false"
    >
      Open Me
    </button>
  </div>
  <div
    aria-hidden="true"
  />
  <div
    aria-hidden="true"
  />
  <div>
    <div
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(255, 255, 255, 0.75);"
    >
      <div
        aria-labelledby="label-id"
        aria-modal="true"
        role="dialog"
      >
        <h2
          id="label-id"
        >
          Content
        </h2>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`default 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
  >
    Open Me
  </button>
</DocumentFragment>
`;

exports[`initializeOpen prop 1`] = `
<DocumentFragment>
  <div>
    <div
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(255, 255, 255, 0.75);"
    >
      <div
        aria-labelledby="label-id"
        aria-modal="true"
        role="dialog"
      >
        <h2
          id="label-id"
        >
          Content
        </h2>
      </div>
    </div>
  </div>
  <button
    aria-disabled="false"
  >
    Open Me
  </button>
</DocumentFragment>
`;
